# Traceseal-verify

./: CHANGELOG.md  LICENSE  README.md  RECEIPT-SPEC.md  RELEASE.md  pyproject.toml
src/traceseal_verify/: __init__.py  cli.py
