[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "traceseal-verify"
version = "1.0.0"
description = "Verify Traceseal Execution Receipts — cryptographic proof of what your AI agent did"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
keywords = ["ai", "agents", "trust", "verification", "receipts", "ed25519", "traceseal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = ["cryptography>=41.0"]

[project.scripts]
traceseal-verify = "traceseal_verify.cli:main"

[project.urls]
Homepage = "https://traceseal.io"
Specification = "https://traceseal.io/spec"
Source = "https://github.com/traceseal/traceseal-verify"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
